# delta-kernel-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  cliff.toml  justfile  release.sh  release.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  default-kernel-features  semver-checks.yml
acceptance/: Cargo.toml  build.rs
acceptance/src/: data.rs  meta.rs
acceptance/tests/: dat_reader.rs  other.rs
derive-macros/: Cargo.toml
derive-macros/src/: lib.rs
feature-tests/: Cargo.toml
feature-tests/src/: lib.rs
ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
ffi-proc-macros/: Cargo.toml
ffi-proc-macros/src/: lib.rs
ffi/examples/read-table/: CMakeLists.txt  README.md  arrow.c  read_table.c  read_table.h  schema.h
ffi/examples/visit-expression/: CMakeLists.txt  expression.h  expression_print.h  visit_expression.c
ffi/src/: domain_metadata.rs  engine_data.rs  engine_funcs.rs  error.rs  ffi_test_utils.rs  ffi_tracing.rs  handle.rs  lib.rs  scan.rs  schema.rs  test_ffi.rs
ffi/src/expressions/: engine.rs  engine_visitor.rs  kernel.rs  kernel_visitor.rs  mod.rs
ffi/src/transaction/: mod.rs  write_context.rs
ffi/tests/invalid-handle-code/: mut-clone-handle.stderr  not-send.stderr  private-constructor.stderr  shared-as-mut.stderr  shared-not-sync.stderr
ffi/tests/read-table-testing/expected-data/: basic-partitioned.expected
ffi/tests/test-expression-visitor/: expected.txt
integration-tests/: Cargo.toml  test-all-arrow-versions.sh
integration-tests/src/: main.rs
kernel/: Cargo.toml
kernel/benches/: metadata_bench.rs
kernel/examples/common/: Cargo.toml
kernel/examples/common/src/: lib.rs
kernel/examples/inspect-table/: Cargo.toml
kernel/examples/inspect-table/src/: main.rs
kernel/examples/read-table-changes/: Cargo.toml
kernel/examples/read-table-changes/src/: main.rs
kernel/examples/read-table-multi-threaded/: Cargo.toml  README.md
kernel/examples/read-table-multi-threaded/src/: main.rs
kernel/examples/read-table-single-threaded/: Cargo.toml
kernel/examples/read-table-single-threaded/src/: main.rs
kernel/src/: arrow.rs  arrow_compat.rs  engine_data.rs  error.rs  last_checkpoint_hint.rs  lib.rs  listed_log_files.rs  log_replay.rs  log_segment.rs  parquet.rs  path.rs  schema.rs  snapshot.rs  table.rs  table_configuration.rs  table_properties.rs  transaction.rs  utils.rs
kernel/src/actions/: crc.rs  deletion_vector.rs  domain_metadata.rs  mod.rs  schemas.rs  set_transaction.rs  visitors.rs
kernel/src/checkpoint/: log_replay.rs  mod.rs  tests.rs
kernel/src/engine/: arrow_conversion.rs  arrow_data.rs  arrow_expression.rs  arrow_get_data.rs  arrow_utils.rs  ensure_data_types.rs  mod.rs  parquet_row_group_skipping.rs
kernel/src/engine/arrow_expression/: apply_schema.rs  evaluate_expression.rs  mod.rs  opaque.rs  tests.rs
kernel/src/engine/default/: executor.rs  file_stream.rs  filesystem.rs  json.rs  mod.rs  parquet.rs  storage.rs
kernel/src/engine/parquet_row_group_skipping/: tests.rs
kernel/src/engine/sync/: fs_client.rs  json.rs  mod.rs  parquet.rs  storage.rs
kernel/src/expressions/: column_names.rs  literal_expression_transform.rs  mod.rs  scalars.rs  transforms.rs
kernel/src/history_manager/: search.rs
kernel/src/kernel_predicates/: mod.rs  parquet_stats_skipping.rs  tests.rs
kernel/src/kernel_predicates/parquet_stats_skipping/: tests.rs
kernel/src/log_segment/: tests.rs
kernel/src/predicates/: mod.rs  parquet_stats_skipping.rs  tests.rs
kernel/src/predicates/parquet_stats_skipping/: tests.rs
kernel/src/scan/: data_skipping.rs  log_replay.rs  mod.rs  state.rs
kernel/src/scan/data_skipping/: tests.rs
kernel/src/schema/: compare.rs  derive_macro_utils.rs  mod.rs  variant_utils.rs
kernel/src/table_changes/: log_replay.rs  mod.rs  physical_to_logical.rs  scan.rs  scan_file.rs
kernel/src/table_changes/log_replay/: tests.rs
kernel/src/table_features/: column_mapping.rs  mod.rs  timestamp_ntz.rs
kernel/src/table_properties/: deserialize.rs
kernel/src/transaction/: mod.rs
kernel/tests/: cdf.rs  dv.rs  golden_tables.rs  hdfs.rs  read.rs  v2_checkpoints.rs  write.rs
kernel/tests/common/: mod.rs
kernel/tests/data/: 300k-add-files-100-col-partitioned.tar.zst  cdf-table-backtick-column-names.tar.zst  cdf-table-data-change.tar.zst  cdf-table-delete-conditional-all-rows.tar.zst  cdf-table-delete-conditional-two-rows.tar.zst  cdf-table-delete-unconditional.tar.zst  cdf-table-non-partitioned.tar.zst  cdf-table-partitioned.tar.zst  cdf-table-simple.tar.zst  cdf-table-update-ops.tar.zst  cdf-table-with-cdc-and-dvs.tar.zst  cdf-table-with-dv.tar.zst  cdf-table.tar.zst  compacted-log-files-table.tar.zst  timestamp-partitioned-table.tar.zst  unshredded-variant.expected.in  unshredded-variant.tar.zst  v2-checkpoints-json-with-last-checkpoint.tar.zst  v2-checkpoints-json-with-sidecars.tar.zst  v2-checkpoints-json-without-sidecars.tar.zst  v2-checkpoints-parquet-with-last-checkpoint.tar.zst  v2-checkpoints-parquet-with-sidecars.tar.zst  v2-checkpoints-parquet-without-sidecars.tar.zst  v2-classic-checkpoint-json.tar.zst  v2-classic-checkpoint-parquet.tar.zst
test-utils/: Cargo.toml
test-utils/src/: lib.rs
uc-client/: Cargo.toml  README.md
uc-client/examples/: uc-cli.rs
uc-client/src/: client.rs  config.rs  error.rs  lib.rs  tests.rs
uc-client/src/models/: commits.rs  credentials.rs  mod.rs  tables.rs
