[workspace]
members = [
    "acceptance",
    "derive-macros",
    "ffi",
    "kernel",
    "kernel/examples/*",
    "test-utils",
    "feature-tests",
]
# note that in addition to the members above, the workspace includes examples:
# - inspect-table
# - read-table-changes
# - read-table-multi-threaded
# - read-table-single-threaded
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
rust-version = "1.81"
version = "0.9.0"

[workspace.dependencies]
object_store = { version = ">=0.11, <0.12" }
hdfs-native-object-store = "0.13.0"
hdfs-native = "0.11.1"
walkdir = "2.5.0"
