[package]
name = "acceptance"
publish = false
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = [
  "default-engine",
  "arrow_53",
  "developer-visibility",
] }
futures = "0.3"
itertools = "0.13"
object_store = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"

[build-dependencies]
ureq = "2.10"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
datatest-stable = "0.2"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
test-case = { version = "3.3.1" }
tokio = { version = "1.40" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[[test]]
name = "dat_reader"
harness = false
