[package]
name = "acceptance"
publish = false
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = [
  "default-engine",
  "arrow_53",
  "internal-api",
] }
futures = "0.3"
itertools = "0.14"
object_store = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[build-dependencies]
ureq = "3.0"
flate2 = "1.1"
tar = "0.4"

[dev-dependencies]
datatest-stable = "0.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3"
test-case = { version = "3.3.1" }
tokio = { version = "1.44" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[[test]]
name = "dat_reader"
harness = false
