[package]
name = "delta_kernel_ffi"
description = "Provide C FFI bindings for the delta_kernel crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[package.metadata.release]
release = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tracing = "0.1"
tracing-core = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [ "json" ] }
url = "2"
delta_kernel = { path = "../kernel", default-features = false, features = [
  "developer-visibility",
] }
delta_kernel_ffi_macros = { path = "../ffi-proc-macros", version = "0.8.0" }

[build-dependencies]
cbindgen = "0.28"
libc = "0.2.158"

[dev-dependencies]
object_store = { workspace = true }
rand = "0.8.5"
test_utils = { path = "../test-utils" }
tokio = { version = "1.40" }
trybuild = "1.0"

[features]
default = ["default-engine"]
cloud = ["delta_kernel/cloud"]
default-engine = ["delta_kernel/default-engine", "delta_kernel/arrow"]
tracing = [ "tracing-core", "tracing-subscriber" ]
sync-engine = ["delta_kernel/sync-engine", "delta_kernel/arrow"]
developer-visibility = []
test-ffi = []
