[package]
name = "uc-client"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
thiserror = "2.0"
tracing = "0.1"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
