[package]
name = "common"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "arrow-55",
  "default-engine",
  "internal-api",
] }
