[package]
name = "inspect-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = "53"
clap = { version = "4.5", features = ["derive"] }
delta_kernel = { path = "../../../kernel", features = [
  "cloud",
  "arrow_53",
  "default-engine",
  "developer-visibility",
] }
env_logger = "0.11.3"
url = "2"

[package.metadata.release]
release = false
