[package]
name = "inspect-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
delta_kernel = { path = "../../../kernel", features = [
  "arrow",
  "default-engine",
  "internal-api",
] }
env_logger = "0.11.8"
url = "2"

# for cargo-release
[package.metadata.release]
release = false
